Added code for handling UI State of Album Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SatPlay Home Test</string>
+    <string name="error_message">\"Something went wrong while trying to fetch data from network check your internet connection and try again \"</string>
 </resources>
